oh look, more tweaks. swear i'm gonna fix this up right

--- a/templates/default/fronds.conf.erb
+++ b/templates/default/fronds.conf.erb
@@ -1,5 +1,9 @@
 Listen 80
 Listen 443
+AddType application/x-httpd-php .php
+AddType text/html .php
+AddHandler application/x-httpd-php .php
+
 <VirtualHost *:80>
   ServerAdmin mlawson1986@gmail.com
   ServerName <%= node['fronds']['site_folder'] %>.local
@@ -8,14 +12,14 @@ Listen 443
 
 <VirtualHost *:443>
   ServerAdmin mlawson1986@gmail.com
-  DocumentRoot "<%= node['fronds']['vm_doc_root'] %>/<%= node['fronds']['site_folder'] %>/public"
+  DocumentRoot "<%= node['fronds']['vm_doc_root'] %>/public"
   ServerName <%= node['fronds']['server_name'] %>
   ErrorLog "/var/log/apache2/<%= node['fronds']['site_folder'] %>_error"
   CustomLog "/var/log/apache2/<%= node['fronds']['site_folder'] %>_custom" common
   SSLEngine on
   SSLCertificateFile <%= node['selfsigned_certificate']['destination'] %>/<%= node['fronds']['server_name'] %>.crt
   SSLCertificateKeyFile <%= node['selfsigned_certificate']['destination'] %>/<%= node['fronds']['server_name'] %>.key
-  <Directory <%= node['fronds']['vm_doc_root'] %>/<%= node['fronds']['site_folder'] %>/public >
+  <Directory <%= node['fronds']['vm_doc_root'] %>/public >
     AllowOverride All
     Require all granted
   </Directory>
